r19-mod-6.3
-BUGFIX: On Linux the previewer refuses to quit.
-In Windows 10 and later console window can show colored text (with ANSI escape sequences).
-Add option to hide (VS and Qt) debug messages.
-Add option to set dither type.
-Show _AbsoluteTime frame props on title of preview panel.
-Do not load chapter for VFR clips.
-Add hotkey in preview panel for jumping to frame by frame number.

r19-mod-6.2
-BUGFIX: Encoding CLI won't start in Linux.
-BUGFIX: Script is not loaded when file path encoding is not UTF-8.
-VSEditor is a GUI app again with an option to toggle console window.
-Adapt to Windows dark theme.
-Offer qdarkstyle theme for all platforms.

r19-mod-6.1
-BUGFIX: Memory leak when closing preview window (regression from mod-6).
-Support switching to output indices 10-19.
-Add a standalone preview panel launcher, i.e. a script previewer.

r19-mod-6
-Drop Qt 5 support.
-Switch to VapourSynth API4 (won't work with API3 VSScript libraries).
-Add support for previewing video nodes with variational format or dimensions.

r19-mod-5.6
-BUGFIX: Chroma location parameter ignored when resampling to RGB for preview.
-A panel is added for displaying frame properties.

r19-mod-5.5
-BUGFIX: Wrong dimensions in cropping when there are multiple video outputs.
-Binaries are now working as console applications (instead of GUI apps) in Windows.
-Binaries print version in Windows if the console is not automatically hidden on start.
-A shortcut launching VSEditor in CMD is added to the installer.
-Unused doc path options are removed.
-Added an option to prefer loading VS libs from settings (other than Windows registry or sys PATH).

r19-mod-5.4
-BUGFIX: Reject problematic output nodes with invalid format.
-Binaries print version and exit with -v or --version.

r19-mod-5.3
-BUGFIX: Flickering in playback due to a regression introduced with the dark theme.
-BUGFIX: Image doesn't align to the top-left corner of the preview window in dark theme.