@@ -1,7 +1,7 @@
 #ifndef VERSION_INFO_H_INCLUDED
 #define VERSION_INFO_H_INCLUDED
 
-#define VSE_VERSION_STR "R19-mod-6.3"
+#define VSE_VERSION_STR "R19-mod-6.4"
 
 #define VSE_VS_API_VER_MAJOR 4
 #define VSE_VS_API_VER_MINOR 1
